# weatherapi-rustc

./: Cargo.toml  README.md  readme.md
src/: lib.rs  main.rs  models.rs  weather_service.rs
templates/: base.html  error.html  index.html  weather.html
